kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forkfinder
  labels:
    app: forkfinder
